--- a/01-sample.yml
+++ b/01-sample.yml
@@ -2,7 +2,7 @@
   hosts: all
   tasks:
     - name: Print Hello
-    ansible.builtin.debug
+    ansible.builtin.debug:
      msg: Hello
     - name: Print Fruit
     debug: Apple
