--- a/01-sample.yml
+++ b/01-sample.yml
@@ -4,7 +4,7 @@
     - name: Print Hello
       ansible.builtin.debug:
        msg: Hello
-    #- name: Print Fruit
+    - #name: Print Fruit
       debug:
        msg: Apple
 
