YAML variable demo

--- a/02-var.yml
+++ b/02-var.yml
@@ -6,3 +6,11 @@
     - name: Print URL
       ansible.builtin.debug:
         msg: URL = {{URL}}
+- name: Variables from file
+  hosts: localhost
+  vars_files:
+    -demo.var.yml
+  tasks:
+    - name: Print URL
+      ansible.builtin.debug:
+        msg: URL = {{URL}}
