--- a/02-var.yml
+++ b/02-var.yml
@@ -14,3 +14,11 @@
     - name: Print URL
       ansible.builtin.debug:
         msg: URL = {{URL}}
+ - name: Variables from tasks level
+     hosts: localhost
+     tasks:
+       - name: Print variable
+         ansible.builtin.debug:
+           msg: URL = {{URL}}
+         vars:
+           URL: tasks.example.com
