YAML variable demo

--- a/02-var.yml
+++ b/02-var.yml
@@ -26,3 +26,10 @@
         msg: URL = {{URL}}
      vars:
         URL: tasks.example.com
+
+- name: Variables from tasks level
+  hosts: localhost
+  tasks:
+    - name: Print variable
+      ansible.builtin.debug:
+        msg: URL = {{URL}}
