--- a/02-var.yml
+++ b/02-var.yml
@@ -44,3 +44,13 @@
       ansible.builtin.debug:
         msg: "{{ ansible_fqdn }}"
         # if any value starts with a variable then we need to quote it, Either single or double
+
+- name : Register Variable
+  hosts: localhost
+  tasks :
+     - name : run uptime command
+       ansible.builtin.shell : uptime
+       register : output
+     - name : print output
+       ansible.builtin.debug:
+         msg: "{{output}}"
