YAML variable demo

--- a/02-var.yml
+++ b/02-var.yml
@@ -53,4 +53,4 @@
        register : output
      - name : print output
        ansible.builtin.debug:
-         msg: "{{output}}"
+         msg: "{{output.stdout}}"
