YAML variable demo

--- a/02-var.yml
+++ b/02-var.yml
@@ -66,5 +66,5 @@
       ansible.builtin.set_fact:
         LIST : "{{output1}}"
     - name : print output
-      ansible.buitlin.debug:
+      ansible.builtin.debug:
         msg: "{{LIST}}"
